--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,21 @@
 }
 .dark-mode * p,
 .dark-mode * h1,
-.dark-mode * h2,
 .dark-mode * h3,
 .dark-mode * h4,
 .dark-mode * h5,
 .dark-mode * h6,
 .dark-mode * span,
+.dark-mode * ul,
+.dark-mode * li,
+.dark-mode * button,
 .dark-mode * strong,
 .dark-mode * small {
   color: white;
+}
+
+.darkmode * button.accordion-button {
+  background: var(--dark) !important;
 }
 
 button.theme-btn {
