--- a/src/components/commons/card-modal/CardModal.css
+++ b/src/components/commons/card-modal/CardModal.css
@@ -1,21 +1,20 @@
-.modal-card {
-  height: 700px;
-  width: auto;
-}
-
 .modal-container {
   position: fixed;
-  width: calc(100vw + 16px);
+  max-width: 100% !important;
   height: 100vh;
-  max-width: 100vw !important;
-  top: 40px;
-  left: 0;
   background-color: var(--bg-sub1);
-  overflow: scroll;
-  z-index: 50;
   transform: scale(0.5);
   animation: scale-up 1s forwards;
   padding-bottom: 40px;
+  overflow-y: scroll;
+  top: 40px;
+  left: 0;
+  z-index: 50;
+}
+
+.modal-card {
+  max-width: 300px;
+  max-height: 440px;
 }
 
 .modal-hidden {
@@ -49,15 +48,8 @@
   z-index: 50;
 }
 
-@media screen and (width < 1080px) {
+@media screen and (width < 756px) {
   .modal-card {
-    width: 40vw;
-    height: auto;
+    max-width: 90vw;
   }
 }
-@media screen and (width < 720px) {
-  .modal-card {
-    width: 90% !important;
-  }
-}
-
